Fixed SonarQube problems